2006-10-08  Doug Hellmann  <dhellmann@racemi.com>

	* templates/user.html: Move error message handling into the
	base.html template.

	* views.py (newfunc): Decorator for view functions which use JSON.
	(add_feed): Use the jsonView decorator.

	* templates/user.html: Evaluate the return value as a JSON payload
	and alert the user to errors.

	* models.py (find_or_create_podcast): Raise more specific errors
	when we do not find information we expect.

2006-10-07  Doug Hellmann  <dhellmann@racemi.com>

	* views.py (add_feed): Change show_feed_contents to add_feed.

	* urls.py (urlpatterns): Change show_feed_contents to add_feed.

	* templates/user.html: Change show_feed_contents to add_feed.

	* forms.py (AddFeedForm.__init__): Rename class to reflect its
	true use.

	* views.py (show_feed_contents): Provide a user for
	ShowFeedContentsForm.

	* templates/user.html: Show the podcasts associated with the user.

	* models.py (Podcast): Add many-to-many relationship between
	podcasts and users.
	(find_or_create_podcast): Make sure there is a relationship
	between the user and podcast.

	* forms.py (ShowFeedContentsForm.save): Move the real logic into
	find_or_create_podcast in the models module.
	(ShowFeedContentsForm.__init__): We may need a user to save the
	new podcast.
	(ShowFeedContentsForm.save): Pass our user to
	find_or_create_podcast.

	* models.py (find_or_create_podcast): New function with logic
	moved from the forms module.

	* views.py (show_feed_contents): The manipulator save method
	returns the Podcast and the parsed data from the feed.

	* models.py (QueueItem): Add author_name and author_email fields.

	* forms.py (ShowFeedContentsForm.save): Use feedparser to pull
	data from the feed and store it in the db.  Return the Podcast
	instance and the parsed data.

2006-10-01  Doug Hellmann  <dhellmann@racemi.com>

	* templates/user.html: Use wipeIn/wipeOut instead of just setting
	the inner html.
