@@ -1,3 +1,11 @@
+2006-10-14  Doug Hellmann  <dhellmann@racemi.com>
+
+	* feeds.py (UserFeed): Add methods for missing values required by
+	Atom feed.
+
+	* models.py (QueueItem): Rearrange fields in admin screens.  Add
+	list filter for user.
+
 2006-10-08  Doug Hellmann  <dhellmann@racemi.com>
 
 	* templates/user.html: Move error message handling into the
